--- a/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_0_0_0.tex
+++ b/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_0_0_0.tex
@@ -2519,19 +2519,19 @@ l'attore visualizza un messaggio d'errore.
 & &\hyperref[UC4]{UC4}\\
 & &\hyperref[UC4.6]{UC4.6}\\ \hline
 
-\hypertarget{RFO3.7}{RFO3.7} & l'attore può ridurre una classe &  \hyperlink{Interno}{Interno}\\
+\hypertarget{RFD3.7}{RFD3.7} & l'attore può ridurre una classe &  \hyperlink{Interno}{Interno}\\
 & &\hyperref[UC4]{UC4}\\
 & &\hyperref[UC4.7]{UC4.7}\\ \hline
 
-\hypertarget{RFO3.8}{RFO3.8} & l'attore può espandere una classe &  \hyperlink{Interno}{Interno}\\
+\hypertarget{RFD3.8}{RFD3.8} & l'attore può espandere una classe &  \hyperlink{Interno}{Interno}\\
 & &\hyperref[UC4]{UC4}\\
 & &\hyperref[UC4.8]{UC4.8}\\ \hline
 
-\hypertarget{RFO3.9}{RFO3.9} & l'attore può ridurre un commento &  \hyperlink{Interno}{Interno}\\
+\hypertarget{RFD3.9}{RFD3.9} & l'attore può ridurre un commento &  \hyperlink{Interno}{Interno}\\
 & &\hyperref[UC4]{UC4}\\
 & &\hyperref[UC4.9]{UC4.9}\\ \hline
 
-\hypertarget{RFO3.10}{RFO3.10} & l'attore può espandere un commento &  \hyperlink{Interno}{Interno}\\
+\hypertarget{RFD3.10}{RFD3.10} & l'attore può espandere un commento &  \hyperlink{Interno}{Interno}\\
 & &\hyperref[UC4]{UC4}\\
 & &\hyperref[UC4.10]{UC4.10}\\ \hline
 
@@ -2771,7 +2771,7 @@ l'attore visualizza un messaggio d'errore.
 & &\hyperref[UC5.5]{UC5.5}\\
 & &\hyperref[UC5.5.1]{UC5.5.1}\\ \hline
 
-\hypertarget{RFO4.5.2}{RFO4.5.2} & l'attore può inserire la condizione da verificare del blocco for & \textcolor{red}{\textit{Non Soddisfatto}}\\ \hline \hyperlink{Interno}{Interno}\\
+\hypertarget{RFO4.5.2}{RFO4.5.2} & l'attore può inserire la condizione da verificare del blocco for & \hyperlink{Interno}{Interno}\\
 & &\hyperref[UC5.5]{UC5.5}\\
 & &\hyperref[UC5.5.2]{UC5.5.2}\\ \hline
 
@@ -3010,28 +3010,27 @@ l'attore visualizza un messaggio d'errore.
 \normalsize
 \begin{longtable}{|c|>{\centering}m{7cm}|c|}
 \hline 
-\textbf{Id Requisito} & \textbf{Descrizione} & \textbf{Stato}\\
+\textbf{Id Requisito} & \textbf{Descrizione} & \textbf{Fonti}\\
 \hline
 \endhead
-\hypertarget{RQO1}{RQO1} & è fornito un manuale utente & \textcolor{red}{\textit{Non Soddisfatto}}\\ \hline
+\hypertarget{RQO1}{RQO1} & è fornito un manuale utente & \hyperlink{Capitolato}{Capitolato}\\ \hline
+\hypertarget{RQO1.1}{RQO1.1} & il manuale utente contiene una sezione in cui è descritta ogni interazione discussa come Use Case. & \hyperlink{Interno}{Interno}\\ \hline
 
-\hypertarget{RQO1.1}{RQO1.1} & il manuale utente contiene una sezione in cui è descritta ogni interazione discussa come Use Case. & \textcolor{red}{\textit{Non Soddisfatto}}\\ \hline
+\hypertarget{RQO1.1.1}{RQO1.1.1} & il manuale utente contiene una sezione con le possibili operazioni di troubleshooting nell'uso del software. & \hyperlink{Interno}{Interno}\\ \hline
 
-\hypertarget{RQO1.1.1}{RQO1.1.1} & il manuale utente contiene una sezione con le possibili operazioni di troubleshooting nell'uso del software. & \textcolor{red}{\textit{Non Soddisfatto}}\\ \hline
+\hypertarget{RQO1.2}{RQO1.2} & il manuale utente spiega come procedere all'installazione del server & \hyperlink{Interno}{Interno}\\ \hline
 
-\hypertarget{RQO1.2}{RQO1.2} & il manuale utente spiega come procedere all'installazione del server & \textcolor{red}{\textit{Non Soddisfatto}}\\ \hline
+\hypertarget{RQO1.2.1}{RQO1.2.1} & il manuale utente contiene una sezione con le possibili operazioni di troubleshooting per l'installazione del server & \hyperlink{Interno}{Interno}\\ \hline
 
-\hypertarget{RQO1.2.1}{RQO1.2.1} & il manuale utente contiene una sezione con le possibili operazioni di troubleshooting per l'installazione del server & \textcolor{red}{\textit{Non Soddisfatto}}\\ \hline
+\hypertarget{RQO1.3}{RQO1.3} & il manuale utente è fornito in lingua italiana & \hyperlink{Interno}{Interno}\\ \hline
 
-\hypertarget{RQO1.3}{RQO1.3} & il manuale utente è fornito in lingua italiana & \textcolor{red}{\textit{Non Soddisfatto}}\\ \hline
+\hypertarget{RQF1.4}{RQF1.4} & il manuale utente è fornito in lingua inglese & \hyperlink{Interno}{Interno}\\ \hline
 
-\hypertarget{RQF1.4}{RQF1.4} & il manuale utente è fornito in lingua inglese & \textcolor{red}{\textit{Non Soddisfatto}}\\ \hline
+\hypertarget{RQO2}{RQO2} & è fornito un manuale utente sviluppatore, dedicato a chiunque voglia estendere l'applicazione & \hyperlink{Capitolato}{Capitolato}\\ \hline
 
-\hypertarget{RQO2}{RQO2} & è fornito un manuale utente sviluppatore, dedicato a chiunque voglia estendere l'applicazione & \textcolor{red}{\textit{Non Soddisfatto}}\\ \hline
+\hypertarget{RQF2.1}{RQF2.1} & il manuale utente sviluppatore è fornito in lingua inglese & \hyperlink{Interno}{Interno}\\ \hline
 
-\hypertarget{RQF2.1}{RQF2.1} & il manuale utente sviluppatore è fornito in lingua inglese & \textcolor{red}{\textit{Non Soddisfatto}}\\ \hline
-
-\hypertarget{RQO2.2}{RQO2.2} & il manuale utente sviluppatore è fornito in lingua italiana & \textcolor{red}{\textit{Non Soddisfatto}}\\ \hline
+\hypertarget{RQO2.2}{RQO2.2} & il manuale utente sviluppatore è fornito in lingua italiana & \hyperlink{Interno}{Interno}\\ \hline
 
 \caption[Requisiti di Qualità]{Requisiti di Qualità}
 \label{tabella:req2}
@@ -3041,26 +3040,26 @@ l'attore visualizza un messaggio d'errore.
 \normalsize
 \begin{longtable}{|c|>{\centering}m{7cm}|c|}
 \hline 
-\textbf{Id Requisito} & \textbf{Descrizione} & \textbf{Stato}\\
+\textbf{Id Requisito} & \textbf{Descrizione} & \textbf{Fonti}\\
 \hline
 \endhead
-\hypertarget{RVO1}{RVO1} & l'applicativo deve essere sviluppato tramite tecnologie web. & \textcolor{red}{\textit{Non Soddisfatto}}\\ \hline
+\hypertarget{RVO1}{RVO1} & l'applicativo deve essere sviluppato tramite tecnologie web. & \hyperlink{Capitolato}{Capitolato}\\ \hline
 
-\hypertarget{RVO1.1}{RVO1.1} & l'applicativo lato client è realizzato in HTML5, CSS e Javascript. & \textcolor{red}{\textit{Non Soddisfatto}}\\ \hline
+\hypertarget{RVO1.1}{RVO1.1} & l'applicativo lato client è realizzato in HTML5, CSS e Javascript. & \hyperlink{Capitolato}{Capitolato}\\ \hline
 
-\hypertarget{RVO1.2}{RVO1.2} & l'applicativo lato server è realizzato in Java con server Tomcat. & \textcolor{red}{\textit{Non Soddisfatto}}\\ \hline
+\hypertarget{RVO1.2}{RVO1.2} & l'applicativo lato server è realizzato in Java con server Tomcat. & \hyperlink{Capitolato}{Capitolato}\\ \hline
 
-\hypertarget{RVO1.3}{RVO1.3} & l'applicativo funziona su Mozilla Firefox versione 43 o superiore & \textcolor{red}{\textit{Non Soddisfatto}}\\ \hline
+\hypertarget{RVO1.3}{RVO1.3} & l'applicativo funziona su Mozilla Firefox versione 43 o superiore & \hyperlink{Interno}{Interno}\\ \hline
 
-\hypertarget{RVO1.4}{RVO1.4} & l'applicativo funziona su Google Chrome versione 47 o superiore	 & \textcolor{red}{\textit{Non Soddisfatto}}\\ \hline
+\hypertarget{RVO1.4}{RVO1.4} & l'applicativo funziona su Google Chrome versione 47 o superiore	 & \hyperlink{Interno}{Interno}\\ \hline
 
-\hypertarget{RVD1.5}{RVD1.5} & l'applicativo funziona su Internet Explorer versione 11 o superiore	 & \textcolor{red}{\textit{Non Soddisfatto}}\\ \hline
+\hypertarget{RVD1.5}{RVD1.5} & l'applicativo funziona su Internet Explorer versione 11 o superiore  & \hyperlink{Interno}{Interno}\\ \hline
 
-\hypertarget{RVO1.6}{RVO1.6} & l'applicativo funziona su Safari versione 9 o superiore & \textcolor{red}{\textit{Non Soddisfatto}}\\ \hline
+\hypertarget{RVO1.6}{RVO1.6} & l'applicativo funziona su Safari versione 9 o superiore & \hyperlink{Interno}{Interno}\\ \hline
 
-\hypertarget{RVD1.7}{RVD1.7} & l'applicativo funziona su Microsoft Edge versione 25 o superiore & \textcolor{red}{\textit{Non Soddisfatto}}\\ \hline
+\hypertarget{RVD1.7}{RVD1.7} & l'applicativo funziona su Microsoft Edge versione 25 o superiore & \hyperlink{Interno}{Interno}\\ \hline
 
-\hypertarget{RVO2}{RVO2} & il progetto deve essere sviluppato sulla piattaforma GitHub in modalità pubblica & \textcolor{red}{\textit{Non Soddisfatto}}\\ \hline
+\hypertarget{RVO2}{RVO2} & il progetto deve essere sviluppato sulla piattaforma GitHub in modalità pubblica & \hyperlink{Capitolato}{Capitolato}\\ \hline
 
 \caption[Requisiti di Vincolo]{Requisiti di Vincolo}
 \label{tabella:req3}
@@ -3076,6 +3075,9 @@ l'attore visualizza un messaggio d'errore.
 \endhead
 \hyperlink{RFO1}{RFO1} & \hyperlink{Interno}{Interno}\\
 & \hyperref[UC2]{UC2}\\ \hline
+
+\hypertarget{RFO1.1}{RFO1.1} & \hyperlink{Interno}{Interno}\\
+& \hyperref[UC2.1]{UC2.1}\\ \hline
 
 \hyperlink{RFO2}{RFO2} & \hyperlink{Interno}{Interno}\\
 & \hyperref[UC3]{UC3}\\ \hline
@@ -3179,6 +3181,10 @@ l'attore visualizza un messaggio d'errore.
 & \hyperref[UC4.1.6.5]{UC4.1.6.5}\\
 & \hyperref[UC4.1.6.5.1]{UC4.1.6.5.1}\\ \hline
 
+\hypertarget{RFO3.1.6.6}{RFO3.1.6.6} & \hyperlink{Interno}{Interno}\\
+& \hyperref[UC4.1.6]{UC4.1.6}\\
+& \hyperref[UC4.1.6.6]{UC4.1.6.6}\\ \hline
+
 \hyperlink{RFO3.1.7}{RFO3.1.7} & \hyperlink{Interno}{Interno}\\
 & \hyperref[UC4.1]{UC4.1}\\
 & \hyperref[UC4.1.7]{UC4.1.7}\\ \hline
@@ -3253,6 +3259,155 @@ l'attore visualizza un messaggio d'errore.
 \hyperlink{RFO3.5}{RFO3.5} & \hyperlink{Interno}{Interno}\\
 & \hyperref[UC4]{UC4}\\
 & \hyperref[UC4.5]{UC4.5}\\ \hline
+
+\hypertarget{RFO3.6}{RFO3.6} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC4]{UC4}\\
+&\hyperref[UC4.6]{UC4.6}\\ \hline
+
+\hypertarget{RFD3.7}{RFD3.7} & \hyperlink{Interno}{Interno}\\
+& \hyperref[UC4]{UC4}\\
+& \hyperref[UC4.7]{UC4.7}\\ \hline
+
+\hypertarget{RFD3.8}{RFD3.8} & \hyperlink{Interno}{Interno}\\
+& \hyperref[UC4]{UC4}\\
+& \hyperref[UC4.8]{UC4.8}\\ \hline
+
+\hypertarget{RFD3.9}{RFD3.9} & \hyperlink{Interno}{Interno}\\
+& \hyperref[UC4]{UC4}\\
+& \hyperref[UC4.9]{UC4.9}\\ \hline
+
+\hypertarget{RFD3.10}{RFD3.10} & \hyperlink{Interno}{Interno}\\
+& \hyperref[UC4]{UC4}\\
+& \hyperref[UC4.10]{UC4.10}\\ \hline
+
+\hypertarget{RFO3.11}{RFO3.11} & \hyperlink{Interno}{Interno}\\
+& \hyperref[UC4]{UC4}\\
+& \hyperref[UC4.11]{UC4.11}\\ \hline
+
+\hypertarget{RFO3.11.1}{RFO3.11.1} & \hyperlink{Interno}{Interno}\\
+& \hyperref[UC4.11]{UC4.11}\\
+& \hyperref[UC4.11.1]{UC4.11.1}\\ \hline
+
+\hypertarget{RFO3.11.2}{RFO3.11.2} & \hyperlink{Interno}{Interno}\\
+& \hyperref[UC4.11]{UC4.11}\\
+& \hyperref[UC4.11.2]{UC4.11.2}\\ \hline
+
+\hypertarget{RFO3.11.3}{RFO3.11.3} & \hyperlink{Interno}{Interno}\\
+& \hyperref[UC4.11]{UC4.11}\\
+& \hyperref[UC4.11.3]{UC4.11.3}\\ \hline
+
+\hypertarget{RFO3.11.3.1}{RFO3.11.3.1} & \hyperlink{Interno}{Interno}\\
+& \hyperref[UC4.11.3]{UC4.11.3}\\
+& \hyperref[UC4.11.3.1]{UC4.11.3.1}\\ \hline
+
+\hypertarget{RFO3.11.3.2}{RFO3.11.3.2} & \hyperlink{Interno}{Interno}\\
+& \hyperref[UC4.11.3]{UC4.11.3}\\
+& \hyperref[UC4.11.3.2]{UC4.11.3.2}\\ \hline
+
+\hypertarget{RFO3.11.3.3}{RFO3.11.3.3} & \hyperlink{Interno}{Interno}\\
+& \hyperref[UC4.11.3]{UC4.11.3}\\
+& \hyperref[UC4.11.3.3]{UC4.11.3.3}\\ \hline
+
+\hypertarget{RFO3.11.3.4}{RFO3.11.3.4} & \hyperlink{Interno}{Interno}\\
+& \hyperref[UC4.11.3]{UC4.11.3}\\
+& \hyperref[UC4.11.3.4]{UC4.11.3.4}\\ \hline
+
+\hypertarget{RFO3.11.3.5}{RFO3.11.3.5} & \hyperlink{Interno}{Interno}\\
+& \hyperref[UC4.11.3]{UC4.11.3}\\
+& \hyperref[UC4.11.3.5]{UC4.11.3.5}\\ \hline
+
+\hypertarget{RFO3.11.3.6}{RFO3.11.3.6} & \hyperlink{Interno}{Interno}\\
+& \hyperref[UC4.11.3]{UC4.11.3}\\
+& \hyperref[UC4.11.3.6]{UC4.11.3.6}\\ 
+& \hyperref[UC4.1.4.6.1]{UC4.1.4.6.1}\\ \hline
+
+\hypertarget{RFO3.11.4}{RFO3.11.4} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC4.11]{UC4.11}\\
+&\hyperref[UC4.11.4]{UC4.11.4}\\ \hline
+
+\hypertarget{RFO3.11.4.1}{RFO3.11.4.1} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC4.11.4]{UC4.11.4}\\
+&\hyperref[UC4.11.4.1]{UC4.11.4.1}\\ \hline
+
+\hypertarget{RFO3.11.4.2}{RFO3.11.4.2} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC4.11.4]{UC4.11.4}\\
+&\hyperref[UC4.11.4.2]{UC4.11.4.2}\\ \hline
+
+\hypertarget{RFO3.11.4.3}{RFO3.11.4.3} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC4.11.4]{UC4.11.4}\\
+&\hyperref[UC4.11.4.3]{UC4.11.4.3}\\ \hline
+
+\hypertarget{RFO3.11.4.3.1}{RFO3.11.4.3.1} & \hyperlink{Interno}{Interno}\\
+& \hyperref[UC4.11.4.3]{UC4.11.4.3}\\
+& \hyperref[UC4.11.4.3.1]{UC4.11.4.3.1}\\ \hline
+
+\hypertarget{RFO3.11.4.3.2}{RFO3.11.4.3.2} & \hyperlink{Interno}{Interno}\\
+& \hyperref[UC4.11.4.3]{UC4.11.4.3}\\
+& \hyperref[UC4.11.4.3.2]{UC4.11.4.3.2}\\ \hline
+
+\hypertarget{RFO3.11.4.3.3}{RFO3.11.4.3.3} & \hyperlink{Interno}{Interno}\\
+& \hyperref[UC4.11.4.3]{UC4.11.4.3}\\
+&\hyperref[UC4.11.4.3.3]{UC4.11.4.3.3}\\
+&\hyperref[UC4.1.6.3.3.1]{UC4.1.6.3.3.1}\\ \hline
+
+\hypertarget{RFO3.11.4.4}{RFO3.11.4.4} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC4.11.4]{UC4.11.4}\\
+&\hyperref[UC4.11.4.4]{UC4.11.4.4}\\ \hline
+
+\hypertarget{RFO3.11.4.5}{RFO3.11.4.5} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC4.11.4]{UC4.11.4}\\
+&\hyperref[UC4.11.4.5]{UC4.11.4.5}\\ 
+&\hyperref[UC4.1.6.5.1]{UC4.1.6.5.1}\\ \hline
+
+\hypertarget{RFO3.11.5}{RFO3.11.5} &  \hyperlink{Interno}{Interno}\\
+&\hyperref[UC4.11]{UC4.11}\\
+&\hyperref[UC4.11.5]{UC4.11.5}\\ 
+&\hyperref[UC4.1.8.1]{UC4.1.8.1}\\ \hline
+
+\hypertarget{RFO3.12}{RFO3.12} &  \hyperlink{Interno}{Interno}\\
+&\hyperref[UC4]{UC4}\\
+&\hyperref[UC4.12]{UC4.12}\\ \hline
+
+\hypertarget{RFO3.12.1}{RFO3.12.1} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC4.12]{UC4.12}\\
+&\hyperref[UC4.12.1]{UC4.12.1}\\ \hline
+
+\hypertarget{RFO3.12.2}{RFO3.12.2} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC4.12]{UC4.12}\\
+&\hyperref[UC4.12.2]{UC4.12.2}\\ \hline
+
+\hypertarget{RFO3.12.3}{RFO3.12.3} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC4.12]{UC4.12}\\
+&\hyperref[UC4.12.3]{UC4.12.3}\\ \hline
+
+\hypertarget{RFO3.12.4}{RFO3.12.4} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC4.12]{UC4.12}\\
+&\hyperref[UC4.12.4]{UC4.12.4}\\ \hline
+
+\hypertarget{RFO3.12.5}{RFO3.12.5} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC4.12]{UC4.12}\\
+&\hyperref[UC4.12.5]{UC4.12.5}\\ \hline
+
+\hypertarget{RFO3.12.6}{RFO3.12.6} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC4.12]{UC4.12}\\
+&\hyperref[UC4.12.6]{UC4.12.6}\\ 
+&\hyperref[UC4.2.6.1]{UC4.2.6.1}\\ \hline
+
+\hypertarget{RFO3.13}{RFO3.13} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC4]{UC4}\\
+&\hyperref[UC4.13]{UC4.13}\\ \hline
+
+\hypertarget{RFO3.13.1}{RFO3.13.1} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC4.13]{UC4.13}\\
+&\hyperref[UC4.13.1]{UC4.13.1}\\ \hline
+
+\hypertarget{RFO3.13.2}{RFO3.13.2} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC4.13]{UC4.13}\\
+&\hyperref[UC4.13.2]{UC4.13.2}\\ \hline
+
+\hypertarget{RFO3.13.3}{RFO3.13.3} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC4.13]{UC4.13}\\
+&\hyperref[UC4.13.3]{UC4.13.3}\\ \hline
 
 \hyperlink{RFO4}{RFO4} & \hyperlink{Capitolato}{Capitolato}\\
 & \hyperref[UC5]{UC5}\\ \hline
@@ -3449,11 +3604,147 @@ l'attore visualizza un messaggio d'errore.
 & \hyperref[UC5]{UC5}\\
 & \hyperref[UC5.18]{UC5.18}\\ \hline
 
+\hypertarget{RFD4.19}{RFD4.19} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC5]{UC5}\\
+&\hyperref[UC5.19]{UC5.19}\\ \hline
+
+\hypertarget{RFD4.20}{RFD4.20} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC5]{UC5}\\
+&\hyperref[UC5.20]{UC5.20}\\ \hline
+
+\hypertarget{RFD4.20.1}{RFD4.20.1} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC5.20]{UC5.20}\\
+&\hyperref[UC5.20.1]{UC5.20.1}\\ \hline
+
+\hypertarget{RFD4.20.2}{RFD4.20.2} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC5.20]{UC5.20}\\
+&\hyperref[UC5.20.2]{UC5.20.2}\\ \hline
+
+\hypertarget{RFD4.20.3}{RFD4.20.3} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC5.20]{UC5.20}\\
+&\hyperref[UC5.20.3]{UC5.20.3}\\ \hline
+
+\hypertarget{RFD4.20.4}{RFD4.20.4} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC5.20]{UC5.20}\\
+&\hyperref[UC5.20.4]{UC5.20.4}\\ 
+&\hyperref[UC5.1.4.1]{UC5.1.4.1}\\ \hline
+
+\hypertarget{RFD4.21}{RFD4.21} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC5]{UC5}\\
+&\hyperref[UC5.21]{UC5.21}\\ \hline
+
+\hypertarget{RFD4.21.1}{RFD4.21.1} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC5.21]{UC5.21}\\
+&\hyperref[UC5.21.1]{UC5.21.1}\\ \hline
+
+\hypertarget{RFD4.21.2}{RFD4.21.2} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC5.21]{UC5.21}\\
+&\hyperref[UC5.21.2]{UC5.21.2}\\ \hline
+
+\hypertarget{RFD4.21.3}{RFD4.21.3} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC5.21]{UC5.21}\\
+&\hyperref[UC5.21.3]{UC5.21.3}\\
+&\hyperref[UC5.2.3.1]{UC5.2.3.1}\\ \hline
+
+\hypertarget{RFD4.22}{RFD4.22} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC5]{UC5}\\
+&\hyperref[UC5.22]{UC5.22}\\ \hline
+
+\hypertarget{RFD4.22.1}{RFD4.22.1} &   \hyperlink{Interno}{Interno}\\
+&\hyperref[UC5.22]{UC5.22}\\
+&\hyperref[UC5.22.1]{UC5.22.1}\\ \hline
+
+\hypertarget{RFD4.22.2}{RFD4.22.2} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC5.22]{UC5.22}\\
+&\hyperref[UC5.22.2]{UC5.22.2}\\ \hline
+
+\hypertarget{RFD4.22.3}{RFD4.22.3} &\hyperlink{Interno}{Interno}\\
+&\hyperref[UC5.22]{UC5.22}\\
+&\hyperref[UC5.22.3]{UC5.22.3}\\
+&\hyperref[UC5.3.5.1]{UC5.3.5.1}\\ \hline
+
+\hypertarget{RFD4.23}{RFD4.23}  & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC5]{UC5}\\
+&\hyperref[UC5.23]{UC5.23}\\ \hline
+
+\hypertarget{RFD4.23.1}{RFD4.23.1} &  \hyperlink{Interno}{Interno}\\
+&\hyperref[UC5.23]{UC5.23}\\
+&\hyperref[UC5.23.1]{UC5.23.1}\\ \hline
+
+\hypertarget{RFD4.23.2}{RFD4.23.2} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC5.23]{UC5.23}\\
+&\hyperref[UC5.23.2]{UC5.23.2}\\ \hline
+
+\hypertarget{RFD4.23.3}{RFD4.23.3} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC5.23]{UC5.23}\\
+&\hyperref[UC5.23.3]{UC5.23.3}\\ 
+&\hyperref[UC5.4.4.1]{UC5.4.4.1}\\ \hline
+
+\hypertarget{RFD4.24}{RFD4.24} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC5]{UC5}\\
+&\hyperref[UC5.24]{UC5.24}\\ \hline
+
+\hypertarget{RFD4.24.1}{RFD4.24.1} &   \hyperlink{Interno}{Interno}\\
+&\hyperref[UC5.24]{UC5.24}\\
+&\hyperref[UC5.24.1]{UC5.24.1}\\ \hline
+
+\hypertarget{RFD4.24.2}{RFD4.24.2} &  \hyperlink{Interno}{Interno}\\
+&\hyperref[UC5.24]{UC5.24}\\
+&\hyperref[UC5.24.2]{UC5.24.2}\\ \hline
+
+\hypertarget{RFD4.24.3}{RFD4.24.3} &  \hyperlink{Interno}{Interno}\\
+&\hyperref[UC5.24]{UC5.24}\\
+&\hyperref[UC5.24.3]{UC5.24.3}\\ \hline
+
+\hypertarget{RFD4.24.4}{RFD4.24.4} &  \hyperlink{Interno}{Interno}\\
+&\hyperref[UC5.24]{UC5.24}\\
+&\hyperref[UC5.24.4]{UC5.24.4}\\ \hline
+
+\hypertarget{RFD4.24.5}{RFD4.24.5} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC5.24]{UC5.24}\\
+&\hyperref[UC5.24.5]{UC5.24.5}\\ 
+&\hyperref[UC5.5.6.1]{UC5.5.6.1}\\ \hline
+
+\hypertarget{RFD4.25}{RFD4.25} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC5]{UC5}\\
+&\hyperref[UC5.25]{UC5.25}\\ \hline
+
+\hypertarget{RFD4.25.1}{RFD4.25.1} &  \hyperlink{Interno}{Interno}\\
+&\hyperref[UC5.25]{UC5.25}\\
+&\hyperref[UC5.25.1]{UC5.25.1}\\ \hline
+
+\hypertarget{RFD4.25.2}{RFD4.25.2} & \hyperlink{Interno}{Interno}\\
+&\hyperref[UC5.25]{UC5.25}\\
+&\hyperref[UC5.25.2]{UC5.25.2}\\ \hline
+
+\hypertarget{RFD4.25.3}{RFD4.25.3}   \hyperlink{Interno}{Interno}\\
+&\hyperref[UC5.25]{UC5.25}\\
+&\hyperref[UC5.25.3]{UC5.25.3}\\ \hline
+
 \hyperlink{RFO5}{RFO5} & \hyperlink{Interno}{Interno}\\
 & \hyperref[UC6]{UC6}\\ \hline
 
+\hypertarget{RFO5.1}{RFO5.1}&  \hyperlink{Interno}{Interno}\\
+& \hyperref[UC6]{UC6}\\ 
+& \hyperref[UC6.1]{UC6.1}\\ \hline
+
+\hypertarget{RFO5.2}{RFO5.2} &  \hyperlink{Interno}{Interno}\\
+& \hyperref[UC6]{UC6}\\ 
+& \hyperref[UC6.2]{UC6.2}\\ \hline
+
+\hypertarget{RFO5.3}{RFO5.3} &  \hyperlink{Interno}{Interno}\\
+& \hyperref[UC6]{UC6}\\ 
+& \hyperref[UC6.3]{UC6.3}\\ \hline
+
+\hypertarget{RFO5.3.1}{RFO5.3.1} &  \hyperlink{Interno}{Interno}\\
+& \hyperref[UC6.3]{UC6.3}\\ 
+& \hyperref[UC6.3.1]{UC6.3.1}\\ \hline
+
 \hyperlink{RFO6}{RFO6} & \hyperlink{Riunione Esterna}{Riunione Esterna}\\
 & \hyperref[UC7]{UC7}\\ \hline
+
+\hypertarget{RFO6.1}{RFO6.1} & \hyperlink{Interno}{Interno}\\
+& \hyperref[UC7.1]{UC7.1}\\ \hline
 
 \hyperlink{RQO1}{RQO1} & \hyperlink{Capitolato}{Capitolato}\\ \hline
 
@@ -3812,7 +4103,21 @@ l'attore visualizza un messaggio d'errore.
 \caption[Tracciamento Fonti-Requisiti]{Tracciamento Fonti-Requisiti}
 \label{tabella:fonti-requi}
 \end{longtable}
+\clearpage
 
+\subsection{Riepilogo Requisiti}
+\normalsize
+\begin{longtable}{|c|c|c|c|}
+\hline 
+\textbf{Tipo} & \textbf{Obbligatorio} & \textbf{Desiderabile} & \textbf{Facoltativo}\\
+\hline
+Funzionale & 130 & 38 & 0\\ \hline
+Prestazionale & 0 & 0 & 0\\ \hline
+Di Qualità & 8 & 0 & 2\\ \hline
+Di Vincolo & 7 & 2 & 0\\ \hline
+\caption[Riepilogo Requisiti]{Riepilogo Requisiti}
+\label{tabella:riepilogorequi}
+\end{longtable}
 \clearpage
 
 \end{document}
